[package]
name = "motlie-models"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Curated model bundle catalog for the Motlie ecosystem"

autoexamples = false

[lib]
path = "src/lib.rs"

[features]
default = ["model-google-gemma-300m", "model-qwen3-embedding-06b", "model-qwen3-4b", "model-gemma4-e2b"]
model-google-gemma-300m = ["dep:motlie-model-mistral"]
model-qwen3-embedding-06b = ["dep:motlie-model-mistral"]
model-qwen3-4b = ["dep:motlie-model-mistral"]
model-gemma4-e2b = ["dep:motlie-model-mistral"]
model-qwen3-4b-gguf = ["dep:motlie-model-llama-cpp"]
model-gemma4-e2b-gguf = ["dep:motlie-model-llama-cpp"]
model-piper-en-us-ljspeech-medium = ["dep:motlie-model-piper"]
model-sherpa-onnx-streaming = ["dep:motlie-model-sherpa-onnx"]
model-whisper-base-en = ["dep:motlie-model-whisper-cpp"]
llama-cpp-cuda = ["dep:motlie-model-llama-cpp", "motlie-model-llama-cpp/cuda"]
piper-cuda = ["dep:motlie-model-piper", "motlie-model-piper/cuda"]
sherpa-onnx-cuda = ["dep:motlie-model-sherpa-onnx", "motlie-model-sherpa-onnx/cuda"]
whisper-cpp-cuda = ["dep:motlie-model-whisper-cpp", "motlie-model-whisper-cpp/cuda"]
cuda = ["dep:motlie-model-mistral", "motlie-model-mistral/cuda"]
cudnn = ["dep:motlie-model-mistral", "motlie-model-mistral/cudnn"]
flash-attn = ["dep:motlie-model-mistral", "motlie-model-mistral/flash-attn"]
metal = ["dep:motlie-model-mistral", "motlie-model-mistral/metal"]
accelerate = ["dep:motlie-model-mistral", "motlie-model-mistral/accelerate"]

[dependencies]
async-trait = "0.1.89"
hf-hub = "0.5.0"
motlie-model = { path = "../model" }
motlie-model-mistral = { path = "../model/backends/mistral", optional = true }
motlie-model-llama-cpp = { path = "../model/backends/llama_cpp", optional = true }
motlie-model-piper = { path = "../model/backends/piper", optional = true }
motlie-model-sherpa-onnx = { path = "../model/backends/sherpa_onnx", optional = true }
motlie-model-whisper-cpp = { path = "../model/backends/whisper_cpp", optional = true }
thiserror.workspace = true

[dev-dependencies]
anyhow.workspace = true
hound = "3.5"
sysinfo = "0.36.1"
tokio.workspace = true

[[bin]]
name = "motlie-models-download"
path = "src/bin/download_artifacts.rs"

[[example]]
name = "models_v0_1"
path = "examples/v0.1/main.rs"
required-features = ["model-google-gemma-300m", "model-qwen3-embedding-06b"]

[[example]]
name = "models_v0_2"
path = "examples/v0.2/main.rs"
required-features = ["model-qwen3-4b"]

[[example]]
name = "models_v0_3"
path = "examples/v0.3/main.rs"
required-features = ["model-gemma4-e2b"]

[[example]]
name = "models_v0_4"
path = "examples/v0.4/main.rs"
required-features = ["model-qwen3-4b-gguf"]

[[example]]
name = "models_v0_5"
path = "examples/v0.5/main.rs"
required-features = ["model-whisper-base-en"]

[[example]]
name = "models_v0_6"
path = "examples/v0.6/main.rs"
required-features = ["model-sherpa-onnx-streaming"]

[[example]]
name = "models_tts_v0_1"
path = "examples/tts_v0.1/main.rs"
required-features = ["model-piper-en-us-ljspeech-medium"]

[[example]]
name = "bench_chat"
path = "examples/bench_chat.rs"
