[package]
name = "motlie-tmux"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Async multi-target tmux automator"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
regex = "1.10"
tracing = "0.1"
uuid = { version = "1", features = ["v4"] }
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.1"
async-trait = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["full", "test-util"] }
tempfile = "3"
