[package]
name = "motlie-vmm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Reusable VM orchestration: guest lifecycle, SSH proxy, and programmatic control plane"
build = "build.rs"

[features]
default = ["host-runtime"]
debug-trace = []
# Host orchestration remains the default crate shape for existing VMM callers.
# Guest image builds must use `--no-default-features --features guest-vfs` so a
# guest mounter build cannot pull host SSH, terminal, VNET, or libslirp code.
host-runtime = [
    "dep:bytes",
    "dep:flate2",
    "dep:futures",
    "dep:hex",
    "dep:libc",
    "dep:motlie-vfs",
    "dep:motlie-vnet",
    "dep:rand",
    "dep:reqwest",
    "dep:russh",
    "dep:serde",
    "dep:serde_json",
    "dep:sha2",
    "dep:shadow-terminal",
    "dep:tar",
    "dep:thiserror",
    "dep:tokio",
    "dep:tracing",
    "dep:vt100",
]
# Canonical v1.5 guest payload. This feature is intentionally narrow: image
# build compiles the VMM-owned VFS mounter once, then launch only verifies it.
guest-vfs = [
    "dep:anyhow",
    "dep:motlie-vfs",
    "motlie-vfs/client",
    "dep:serde",
    "dep:serde_yaml",
    "dep:tokio",
    "dep:tokio-vsock",
]

[dependencies]
# SSH proxy + CA
russh = { version = "0.60", features = ["aws-lc-rs"], optional = true }
rand = { version = "0.10", optional = true }
motlie-vfs = { path = "../vfs", features = ["vsock"], optional = true }
motlie-vnet = { path = "../vnet", optional = true }
anyhow = { workspace = true, optional = true }
serde_yaml = { version = "0.9", optional = true }
tokio-vsock = { version = "0.7", optional = true }

bytes = { version = "1", optional = true }
libc = { version = "0.2", optional = true }
hex = { version = "0.4", optional = true }
reqwest = { version = "0.13.2", features = ["json"], optional = true }
sha2 = { version = "0.10", optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }

# Async
futures = { version = "0.3", optional = true }

# Core
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["sync", "rt", "net", "io-util", "time", "process"], optional = true }
tracing = { version = "0.1", optional = true }
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }
shadow-terminal = { version = "0.2.3", optional = true }
vt100 = { version = "0.16.2", optional = true }

[dev-dependencies]
anyhow.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
bytes = { version = "1", features = ["serde"] }
rustyline = "18"
atty = "0.2"
ctrlc = "3"

[[example]]
name = "repl_host_v1_3"
path = "examples/v1.3/repl_host.rs"

[[example]]
name = "repl_host_v1_4"
path = "examples/v1.4/repl_host.rs"

[[example]]
name = "repl_host_v1_35"
path = "examples/v1.35/repl_host.rs"

[[example]]
name = "harness_v1_4"
path = "examples/v1.4/harness/main.rs"

[[example]]
name = "repl_host_v1_45"
path = "examples/v1.45/repl_host.rs"

[[example]]
name = "harness_v1_45"
path = "examples/v1.45/harness/main.rs"

[[example]]
name = "harness_v1_5"
path = "examples/v1.5/harness/main.rs"

[[bin]]
name = "motlie-vfs-guest-v1_5"
path = "bins/v1.5/motlie-vfs-guest.rs"
required-features = ["guest-vfs"]
