[package]
name = "motlie-tmux-driver"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Top-level tmux driver binary built on motlie-driver"

[features]
default = ["repl", "tui", "commands-tmux"]
commands-tmux = ["motlie-driver/commands-tmux", "dep:motlie-tmux"]
repl = ["commands-tmux", "motlie-driver/repl", "dep:reedline", "dep:shlex"]
tui = ["commands-tmux", "dep:ratatui", "dep:crossterm", "dep:ansi-to-tui", "dep:motlie-tmux"]

[dependencies]
anyhow.workspace = true
tokio.workspace = true
motlie-driver = { path = "../../../libs/driver", default-features = false }
motlie-tmux = { path = "../../../libs/tmux", optional = true }
reedline = { version = "0.38", optional = true }
shlex = { version = "1.3", optional = true }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"], optional = true }
crossterm = { version = "0.29", optional = true }
ansi-to-tui = { version = "8", optional = true }
