[package]
name = "motlie-model-kokoro"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Kokoro-82M ONNX speech backend implementations for motlie-model TTS contracts"

[lib]
path = "src/lib.rs"

[features]
default = []
cuda = ["motlie-model-ort/cuda", "ort/cuda"]

[dependencies]
async-trait = "0.1.89"
motlie-model = { path = "../..", features = ["metrics-runtime"] }
motlie-model-espeak-ng = { path = "../espeak_ng" }
motlie-model-ort = { path = "../ort" }
ndarray = "0.17"
serde_json = "1.0"
ort.workspace = true
tokenizers = "0.21"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
