[package]
name = "motlie-model-llama-cpp"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "llama.cpp backend implementations for motlie-model contracts"

[lib]
path = "src/lib.rs"

[features]
default = []
cuda = ["llama-cpp-2/cuda"]

[dependencies]
async-trait = "0.1.89"
encoding_rs = "0.8"
llama-cpp-2 = "0.1.146"
motlie-model = { path = "../..", features = ["metrics-runtime"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["rt"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
