[package]
name = "motlie-model-mistral"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Mistral backend implementations for motlie-model contracts"

[lib]
path = "src/lib.rs"

[features]
default = []
cuda = ["mistralrs/cuda"]
cudnn = ["mistralrs/cudnn"]
flash-attn = ["mistralrs/flash-attn"]
metal = ["mistralrs/metal"]
accelerate = ["mistralrs/accelerate"]

[dependencies]
async-trait = "0.1.89"
either = "1.15.0"
image = "0.25.8"
indexmap = "2.14.0"
motlie-model = { path = "../.." }
mistralrs = "0.8.1"
serde_json = "1.0.149"
sysinfo = "0.36.1"
tracing = "0.1"

[dev-dependencies]
tokio.workspace = true
